src/objects/External_Spend_Request_Cost_Allocation__c.object
<CustomObject>
    <description>Breakdown of the EST cost by type, year and quarter</description>
    <fields>
        <fullName>Allocation_Amount__c</fullName>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Quarter__c</fullName>
        <label>Allocation Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocation_Type__c</fullName>
        <label>Allocation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Depreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocation_Year__c</fullName>
        <label>Allocation Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Spend_Request__c</fullName>
        <label>External Spend Request</label>
        <referenceTo>External_Spend_Request__c</referenceTo>
        <relationshipLabel>External Spend Request Cost Allocations</relationshipLabel>
        <relationshipName>External_Spend_Request_Cost_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Organization__c</fullName>
        <label>Funding Organization</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>External Spend Request Cost Allocation</label>
    <nameField>
        <displayFormat>ESRCA-{000000}</displayFormat>
        <label>Cost Allocation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Spend Request Cost Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>